added settings tab, forms and  tables

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "DayPlannerPro",
-    "slug": "day-planner-pro",
+    "name": "ManageSelf",
+    "slug": "manageself",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
